# agent-orchestra

./: .env.example  .gitignore  AGENT-TEAMS-INTEGRATION.md  CLAUDE.md  Cargo.toml  Dockerfile  PROGRESS.md  README.md  RUST_SETUP_GUIDE.md
.claude/: settings.json
.claude/agents/: code-reviewer.md  dashboard-dev.md  rust-dev.md  team-architect.md
.claude/commands/: launch.md  review.md  status.md
.claude/skills/dashboard-patterns/: SKILL.md
.claude/skills/rust-orchestrator/: SKILL.md
.claude/skills/team-launching/: SKILL.md
.claude/skills/worktree-management/: SKILL.md
.github/workflows/: rust-workflow.yml
config/: orchestra.yml
dashboard/: config.py  db.py  gm.py  models.py  orchestrator.py  requirements.txt  server.py  team_launcher.py  watcher.py  worktree.py
dashboard/static/: app.js  style.css
dashboard/templates/: index.html
scripts/: dashboard.sh  launch-team.sh  team-status.sh
src/: agents.rs  client.rs  config.rs  main.rs
